--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,4 +6,8 @@ pydantic[email]==2.9.2
 httpx==0.27.2
 requests==2.32.3
 groq==0.33.0
+langchain_core==1.0.2
+langchain_chroma==1.0.0
+langchain_ollama==1.0.0
+langchain_text_splitters==1.0.0
 
